[package]
name = "teonite_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
colored = "2.0"
dialoguer = "0.9.0"
console = "0.14.1"
dotenv = "0.15.0"
ttl_cache = "0.5.1"
lazy_static = "1.4.0"